--- a/Homeworks/01-hw.md
+++ b/Homeworks/01-hw.md
@@ -139,7 +139,7 @@ $$
 **Утверждение:** код с минимальным расстоянием $d_{\min}$ исправляет любые ошибки кратности
 
 $$
-t\le \left\lfloor\frac{d_{\min}-1}{2}\right\rfloor.
+d(x,y)=\left|\{\, i \mid x_i \neq y_i \,\}\right|.
 $$
 
 **Доказательство (от противного).**
@@ -166,6 +166,7 @@ $$
 $$
 2t\le d_{\min}-1,
 $$
+
 то есть $d(c,c')\le d_{\min}-1$ , что противоречит определению $d_{\min}$.
 
 Значит, такого $c'$ не существует, и ближайшее кодовое слово единственно — ошибки кратности $\le t$ исправляются.
