--- a/Homeworks/01-hw.md
+++ b/Homeworks/01-hw.md
@@ -139,7 +139,7 @@ $$
 **Утверждение:** код с минимальным расстоянием $d_{\min}$ исправляет любые ошибки кратности
 
 $$
-d(x,y)=\left|\{\, i \mid x_i \neq y_i \,\}\right|.
+d(x,y)=\left|\{\, i \mid x_i \neq y_i \,\}\right|
 $$
 
 **Доказательство (от противного).**
