--- a/Homeworks/01-hw.md
+++ b/Homeworks/01-hw.md
@@ -109,8 +109,9 @@ $$
 Определение:
 
 $$
-d(x,y)=\#\{i:\;x_i\neq y_i\}.
+d(x,y)=\left|\{\, i \mid x_i \neq y_i \,\}\right|
 $$
+
 
 Проверим аксиомы метрики:
 
@@ -139,7 +140,7 @@ $$
 **Утверждение:** код с минимальным расстоянием $d_{\min}$ исправляет любые ошибки кратности
 
 $$
-d(x,y)=\left|\{\, i \mid x_i \neq y_i \,\}\right|
+t\le \left\lfloor\frac{d_{\min}-1}{2}\right\rfloor.
 $$
 
 **Доказательство (от противного).**
