--- a/Homeworks/01-hw.md
+++ b/Homeworks/01-hw.md
@@ -109,9 +109,8 @@ $$
 Определение:
 
 $$
-d(x,y)=\left|\{\, i \mid x_i \neq y_i \,\}\right|
+d(x,y)=\lvert \{\, i \mid x_i \neq y_i \,\} \rvert
 $$
-
 
 Проверим аксиомы метрики:
 
