--- a/Homeworks/01-hw.md
+++ b/Homeworks/01-hw.md
@@ -109,7 +109,7 @@ $$
 Определение:
 
 $$
-d(x,y)=\lvert \{\, i \mid x_i \neq y_i \,\} \rvert
+d(x,y)=\left|\{\, i \mid x_i \neq y_i \,\}\right|
 $$
 
 Проверим аксиомы метрики:
