--- a/Lectures/01.md
+++ b/Lectures/01.md
@@ -1,12 +1,17 @@
 
-### Конспект лекции №1  
+# Конспект лекции №1  
 **Обработка и интерпретация сигналов**  
-**Тема: Введение в канальное кодирование. Модель системы связи, двоичный симметричный канал, основные понятия теории кодов**
 
 **Цель курса**  
+Все данные, для которых существует возможность потери или искажения,  всегда кодируются с целью уменьшения влияния этих искажений.
+
 Изучение теории передачи данных через каналы с помехами и способов канального кодирования, позволяющих добавлять избыточность для борьбы с ошибками.
 
-### 1. Упрощённая модель цифровой системы связи
+## 1. Упрощённая модель цифровой системы связи
+Источник данных может быть:
+- человек,
+- флеш-накопитель,
+- компакт-диск и т.п.
 
 ```
 Источник данных  
@@ -25,8 +30,30 @@
 - **Канал** — вносит ошибки.  
 - **Декодер** — пытается восстановить исходные информационные символы.
 
-### 2. Математическая модель канала  
-Работаем с **дискретными последовательностями** над полем GF(2).
+## 2. Основные допущения модели
+
+1. Работаем с **дискретными последовательностями**.  
+2. Информационная последовательность состоит из элементов поля  
+
+   **$GF(2) = \{0, 1\}$**
+
+Источник генерирует последовательность нулей и единиц.  
+После кодирования выходят также битовые символы, но, как правило,  
+их становится больше за счёт избыточности.
+
+---
+
+## 3. Двоичный симметричный канал (ДСК)
+
+В качестве математической модели канала используется  
+**двоичный симметричный канал**.
+
+На вход канала последовательно подаются символы $0$ и $1$.
+
+### Переходная вероятность
+
+Поданный на канал сигнал может быть интерпретирован неверно  
+с вероятностью $p$, называемой **переходной вероятностью**.
 
 **Двоичный симметричный канал (ДСК / BSC)**
 
@@ -37,75 +64,200 @@
   1  ────p────→  0
   1  ──(1−p)──→  1
 ```
+Если кодируем один символ без избыточности,  
+вероятность ошибки равна $p$.
 
-- **p** — вероятность ошибки одного символа (переходная вероятность).  
-- Пример: p = 10⁻³ — на 1000 бит в среднем 1 ошибка.
+---
 
-### 3. Примеры канальных кодов
+## 4. Канальное кодирование
 
-#### 3.1. Код с тройным повторением (3,1)-код
+Процедура перевода информационных символов  
+в кодовые символы называется **кодированием**.
 
-| Информационный бит | Кодовое слово |
-|--------------------|---------------|
-| 0                  | 000           |
-| 1                  | 111           |
+### 4.1. Повторный (тройной) код
 
-- **Декодирование** — мажоритарное (по большинству).  
-- Исправляет **t = 1** ошибку.  
-- Скорость кода **R = 1/3**.
+$$
+0 \rightarrow 000, \qquad
+1 \rightarrow 111
+$$
 
-#### 3.2. Линейный (5,2)-код
+- Скорость кода: $R = \frac{1}{3}$  
+- Исправляет одну ошибку  
+- Декодирование производится по правилу большинства
 
-| Информационные биты | Кодовое слово |
-|---------------------|---------------|
-| 00                  | 00000         |
-| 01                  | 01101         |
-| 10                  | 10110         |
-| 11                  | 11011         |
+---
 
-- Также исправляет **t = 1** ошибку.  
-- Скорость **R = 2/5 = 0.4** (> 1/3) → **экономичнее** предыдущего.
+### 4.2. Линейный $(5,2)$-код
 
-### 4. Основные характеристики кода
+$$
+\begin{aligned}
+00 &\rightarrow 00000 \\
+01 &\rightarrow 10110 \\
+10 &\rightarrow 01011 \\
+11 &\rightarrow 11101
+\end{aligned}
+$$
 
-- **N** — длина кодового слова  
-- **K** — число информационных символов  
-- **Скорость кода** R = K/N (0 < R ≤ 1)
-- **$d_{min}$** — минимальное расстояние Хэмминга кода
+Свойства кода:
+- код линейный;
+- исправляет одну ошибку;
+- скорость кода:
+$$
+R = \frac{k}{n} = \frac{2}{5}
+$$
 
-### 5. Теорема Шеннона (1948)
+**Домашнее задание:**  
+вычислить вероятность ошибки декодирования при $p = 10^{-3}$.
 
-**Пропускная способность ДСК:**
+---
 
-$$C = 1 - h_2(p), \quad h_2(p) = -p\log_2 p - (1-p)\log_2(1-p)$$
+## 5. Теорема Шеннона (1948)
 
-**Утверждение:**  
-Если R < C, то существуют коды (при достаточно больших N), обеспечивающие **сколь угодно малую** вероятность ошибки декодирования.  
-Если R > C — надёжная передача невозможна.
+Теория информации делится на:
+- кодирование источников (удаление избыточности);
+- канальное кодирование (добавление избыточности).
 
-**Пример:** p = 10⁻³ → C ≈ 0.988  
-Достаточно всего **~2% избыточности**, чтобы теоретически добиться почти идеальной надёжности.
+Пропускная способность двоичного симметричного канала:
 
-### 6. Метрики Хэмминга
+$$
+C = 1 - h_2(p)
+$$
 
-- **Вес Хэмминга** ω(x) — число единиц в векторе x.  
-- **Расстояние Хэмминга** d(x,y) = ω(x ⊕ y) (для GF(2)).  
-- **Минимальное расстояние кода** $d_{min}$ = min{d(x,y) | x ≠ y ∈ C}
+где
 
-**Корректирующая способность:**
+$$
+h_2(p) = -p \log_2 p - (1-p) \log_2 (1-p)
+$$
 
-$t \leq \lfloor (d-1)/2 \rfloor$, где $\lfloor x \rfloor$ - наибольшее целое, не превышающее $x$
+### Утверждение
 
-### 7. Линейные коды
+- если $R < C$, вероятность ошибки может быть сколь угодно малой;
+- если $R > C$, надёжная передача невозможна.
 
-Код линейный, если сумма (по mod 2) любых двух кодовых слов тоже принадлежит коду.
+---
 
-Для линейных кодов:  
-$d_{min}$ = минимальный ненулевой вес кодовых слов.
+## 6. Вес и расстояние Хэмминга
 
-**Порождающая матрица G** (размер K × N)  
-Строки — базисные векторы.  
-Кодовое слово: c = m · G
+**Вес Хэмминга**:
+$$
+\omega(x)
+$$
+— число единиц в двоичном векторе $x$.
 
-**Проверочная матрица H** (размер (N−K) × N)  
-c · Hᵀ = 0 ∀ c ∈ C
+**Расстояние Хэмминга**:
+$$
+d(x,y) = \omega(x+y)
+$$
+
+Также:
+$$
+d(x,0) = \omega(x)
+$$
+
+**Пример:**
+
+$$
+x = 001101, \quad \omega(x)=3
+$$
+$$
+y = 101001, \quad \omega(y)=3
+$$
+$$
+d(x,y)=2
+$$
+
+---
+
+## 7. Минимальное расстояние кода
+
+$$
+d_{\min} = \min_{x \ne y} d(x,y)
+$$
+
+---
+
+## 8. Исправляющая способность
+
+$$
+t \le \left\lfloor \frac{d_{\min}-1}{2} \right\rfloor
+$$
+
+---
+
+## 9. Линейные коды
+
+Код $C$ называется линейным, если:
+
+$$
+\forall x,y \in C : x+y \in C
+$$
+
+Для линейных кодов:
+
+$$
+d_{\min} = \min_{z \in C,\, z \ne 0} \omega(z)
+$$
+
+---
+
+## 10. $q$-ичные линейные коды
+
+Линейный $(n,k)$-код над полем $GF(q)$ —  
+это $k$-мерное подпространство пространства $F_q^n$.
+
+**Пример:**  
+$q=3,\ k=2,\ n=5$
+
+Число информационных слов:
+$$
+q^k = 9
+$$
+
+---
+
+## 11. Порождающая матрица
+
+Порождающая матрица $G$ имеет размер $k \times n$.
+
+Информационное слово:
+$$
+m = (m_1, \dots, m_k)
+$$
+
+Кодовое слово:
+$$
+c = m \cdot G
+$$
+
+---
+
+## 12. Проверочная матрица
+
+Пусть существует вектор
+$$
+h = (h_1, \dots, h_n)
+$$
+
+такой, что:
+$$
+(c,h) = \sum_{i=1}^n c_i h_i = 0
+$$
+
+Строится проверочная матрица $H$ размера $(n-k) \times n$,  
+для которой выполняется:
+
+$$
+G \cdot H^T = 0
+$$
+
+---
+
+## 13. Сводка формул
+
+- $\omega(x)$ — вес Хэмминга  
+- $d(x,y)=\omega(x+y)$ — расстояние  
+- $d_{\min}$ — минимальное расстояние  
+- $t \le \left\lfloor \frac{d_{\min}-1}{2} \right\rfloor$  
+- $c = m \cdot G$  
+- $G \cdot H^T = 0$  
+- $R = \frac{k}{n}$
